force-app/main/default/objects/AdminPriceQuote__c/AdminPriceQuote__c.object-meta.xml
<CustomObject>
    <description>Oggetto standard utilizzato per tutti i processi di post Sales.</description>
    <label>Administration Price Quote</label>
    <nameField>
        <label>Administration Price Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Administration Price Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>