force-app/main/default/objects/AdminPriceQuote__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <label>Servizio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_Commodity</valueSetName>
    </valueSet>
</CustomField>