force-app/main/default/objects/AdminPriceQuote__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributore</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Administration Price Quotes</relationshipLabel>
    <relationshipName>Administration_Price_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>