force-app/main/default/objects/AdminPriceQuote__c/fields/HasCorrector__c.field-meta.xml
<CustomField>
    <fullName>HasCorrector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Presenza correttore</label>
    <type>Checkbox</type>
</CustomField>