force-app/main/default/objects/AdminPriceQuote__c/fields/IntendedUse__c.field-meta.xml
<CustomField>
    <fullName>IntendedUse__c</fullName>
    <label>Destinazione Uso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alberghi/pensioni</fullName>
            </value>
            <value>
                <fullName>Attività di intratten. e altro</fullName>
            </value>
            <value>
                <fullName>Completamento allacciamento</fullName>
            </value>
            <value>
                <fullName>NO DOM TEMPOR. &gt;40kW-FIERA</fullName>
            </value>
            <value>
                <fullName>Ospedali/case di cura/</fullName>
            </value>
            <value>
                <fullName>Stralcio di allac. - Uso cant.</fullName>
            </value>
            <value>
                <fullName>Uso domestico</fullName>
            </value>
            <value>
                <fullName>Antincendio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>