force-app/main/default/objects/AdminPriceQuote__c/fields/MeterManufactureYear__c.field-meta.xml
<CustomField>
    <fullName>MeterManufactureYear__c</fullName>
    <label>Anno di fabbricazione del Contatore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>