force-app/main/default/objects/AdminPriceQuote__c/fields/RealEstateUnits__c.field-meta.xml
<CustomField>
    <fullName>RealEstateUnits__c</fullName>
    <label>Numero Unita Immobiliari &gt; 6</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>