force-app/main/default/objects/AdminPriceQuote__c/fields/SupplyUseType__c.field-meta.xml
<CustomField>
    <fullName>SupplyUseType__c</fullName>
    <label>Tipo Uso Fornitura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACQUEDOTTO CIVILE</fullName>
            </value>
            <value>
                <fullName>ACQUEDOTTO INDUSTRIALE</fullName>
            </value>
            <value>
                <fullName>FOGNATURA</fullName>
            </value>
            <value>
                <fullName>TELERISCALDAMENTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>